@@ -1,0 +1,32 @@
+
+
+E: debian-faq_3.1.6_i386.changes: bad-distribution-in-changes-file UNRELEASED
+W: debian-faq source: out-of-date-standards-version 3.6.2.0 (current is 3.7.3)
+W: debian-faq source: changelog-should-mention-nmu
+W: debian-faq source: source-nmu-has-incorrect-version-number 3.1.6
+E: debian-faq: no-copyright-file
+
+linda /home/joostvb/svn/svn.debian.org/ddp/manuals/build-area/debian-faq_3.1.6_i386.changes
+E: debian-faq; Package does not contain a copyright file.
+E: debian-faq; The package contains no changelog.
+
+
+lang-specific stuff in separate binary packages
+
+
+# FIXME: should (?) install
+#
+# de/   (last update 2006-07)
+# zh_CN (last update 2005-04)
+# it    (last update 2004-09)
+#
+# fr/   updated since 2004-09   doc-debian-fr - Debian Manuals, FAQs and other documents in French
+# uk/   updated since 2004-09   doc-debian-uk - Debian Manuals and other documents in Ukrainian
+# es/   updated since 2004-09   doc-debian-es - Debian FAQ translated to Spanish
+#
+# pl    out of date since < 2004-08
+# bt_BR out of date since < 2004-08
+# ru    out of date since < 2004-08
+
+
+
