@@ -4,7 +4,7 @@ Priority: standard
 Maintainer: Javier Fernandez-Sanguino Pen~a <jfs@computer.org>
 Uploaders: Pierre Machard <pmachard@debian.org>, Josip Rodin <joy-packages@debian.org>
 Build-Depends-Indep: debiandoc-sgml, tetex-bin, tetex-extra
-Standards-Version: 3.6.2.0
+Standards-Version: 3.7.3
 Vcs-Browser: http://svn.debian.org/wsvn/ddp/manuals/trunk/faq/
 Vcs-Svn: svn://svn.debian.org/ddp/manuals/trunk/faq/
 
