@@ -1,21 +1,6 @@
 #!/usr/bin/make -f
 # derived from sample debian/rules file for GNU hello by Ian Jackson.
 
-# FIXME: should (?) install
-#
-# de/   (last update 2006-07)
-# zh_CN (last update 2005-04)
-# it    (last update 2004-09)
-#
-# fr/   updated since 2004-09   doc-debian-fr - Debian Manuals, FAQs and other documents in French
-# uk/   updated since 2004-09   doc-debian-uk - Debian Manuals and other documents in Ukrainian
-# es/   updated since 2004-09   doc-debian-es - Debian FAQ translated to Spanish
-#
-# pl    out of date since < 2004-08
-# bt_BR out of date since < 2004-08
-# ru    out of date since < 2004-08
-#
-
 tmp = $(CURDIR)/debian/tmp
 docdir = $(tmp)/usr/share/doc/debian
 
