@@ -15,6 +15,8 @@ debian-faq (3.1.6) UNRELEASED; urgency=high
   * debian/rules: faq no longer is in FAQ/, but in .: adjust build rules.
   * debian/doc-base: imported from doc-debian-3.1.5/doc-base/debian-faq.
     updated list of authors.
+  * debian/control: Bump Standards-Version from 3.6.2.0 to 3.7.3 (no changes
+    needed.)
   * debian/rules: try to install de and it translations too CHECKME/FIXME.
   * Update the content of the FAQ files to their latest SVN
     versions, from svn.debian.org ddp/manuals/faq:
